fixed the problem with too muvh whitespace

--- a/main.css
+++ b/main.css
@@ -400,6 +400,7 @@ footer {
 @media screen and (min-width: 768px) {
   header {
     height: 100vh;
+    display: contents;
   }
   .blogs {
     display: flex;
